# burning-ship

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  linux.makefile  makefile
.github/workflows/: compile.yml  linux-x86_64.yml  win-mingw64-x86_64.yml
include/: BurningShip.h
src/: BurningShip.cpp  CMakeLists.txt  FractalApp.cpp
